--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+<head>
+<title>
+  Survey Form
+</title>
+<link rel="stylesheet" href="styles.css">
+<head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <h1 id="title">Survey to Fill in</h1>
+    <p id="description">This survey contains a name, mail adress, phone number, etc.</p>
 
-    <h1> Hello World!</h1>
-    <script  src="js/index.js"></script>
+    <form id="survey-form">
+      <label for="name" id="name-label">Name</label>
+      <input id="name" type="text" placeholder="Enter your name" required/>
+      <label for="email" id="email-label">Email</label>
+      <input id="email" type="email" placeholder="Enter your email" required ?>
+      <label for="Number" id="number-label"> Phone Number</label>
+      <input id="number" type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" minlength="9" maxlength="14" placeholder="Enter your Phone number"/>
+
+      <select name="role" id="dropdown">
+        <option>Student</option>
+        <option>Teacher</option>
+        <option>other</option>
+        </select>
+
+        <input type="radio" name="Subject">
+        <label for="Math">Math</label><br>
+        <input type="radio" name="subject">
+        <label for="English">English</label>
+
+        <label>Programming language</label>
+
+        <label for="1">
+          <input type="checkbox" value="Java">JAVA</input></label>
+           <label for="2">
+          <input type="checkbox" value="Javascript">JAVASCRIPT</input></label>
+           <label for="3">
+          <input type="checkbox" value="python">PYTHON</input></label>
+
+<label for="comment">Comment</label>
+<textarea name="comment">
+
+  <button type="submit" id="submit">Submit</button>
+
+      </form>
   </body>
 </html>
